--- a/.env
+++ b/.env
@@ -13,6 +13,9 @@
 # Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
+# @see https://docs.docker.com/compose/env-file/
+COMPOSE_PROJECT_NAME=commercekitty
+
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=86928a87bbbd6dc79774e1feddc90174
