--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,9 @@
         "symfony/test-pack": "*"
     },
     "config": {
+        "platform": {
+            "php": "7.1.3"
+        },
         "preferred-install": {
             "*": "dist"
         },
