--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,8 @@
     },
     "autoload": {
         "psr-4": {
+            "CommerceKitty\\Bundle\\": "bundles/",
+            "CommerceKitty\\Component": "components/",
             "App\\": "src/"
         }
     },
