--- a/.env
+++ b/.env
@@ -32,5 +32,5 @@ APP_SECRET=86928a87bbbd6dc79774e1feddc90174
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
+DATABASE_URL="postgresql://commerce:kitty@commercekitty_database_1:5432/commercekitty?serverVersion=11&charset=utf8"
 ###< doctrine/doctrine-bundle ###
