--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /config/docker/nginx/commercekitty.local.key
 /composer.lock
 /symfony.lock
+/yarn.lock
 
 ###> symfony/framework-bundle ###
 /.env.local
@@ -19,3 +20,10 @@
 .phpunit.result.cache
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
+
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
