--- a/composer.json
+++ b/composer.json
@@ -2,44 +2,44 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.3.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "sensio/framework-extra-bundle": "^5.1",
-        "symfony/asset": "4.4.*",
-        "symfony/console": "4.4.*",
-        "symfony/dotenv": "4.4.*",
-        "symfony/expression-language": "4.4.*",
+        "symfony/asset": "5.1.*",
+        "symfony/console": "5.1.*",
+        "symfony/dotenv": "5.1.*",
+        "symfony/expression-language": "5.1.*",
         "symfony/flex": "^1.3.1",
-        "symfony/form": "4.4.*",
-        "symfony/framework-bundle": "4.4.*",
-        "symfony/http-client": "4.4.*",
-        "symfony/intl": "4.4.*",
-        "symfony/mailer": "4.4.*",
+        "symfony/form": "5.1.*",
+        "symfony/framework-bundle": "5.1.*",
+        "symfony/http-client": "5.1.*",
+        "symfony/intl": "5.1.*",
+        "symfony/mailer": "5.1.*",
         "symfony/monolog-bundle": "^3.1",
         "symfony/orm-pack": "*",
-        "symfony/process": "4.4.*",
-        "symfony/security-bundle": "4.4.*",
+        "symfony/process": "5.1.*",
+        "symfony/security-bundle": "5.1.*",
         "symfony/serializer-pack": "*",
-        "symfony/translation": "4.4.*",
+        "symfony/translation": "5.1.*",
         "symfony/twig-pack": "*",
-        "symfony/validator": "4.4.*",
-        "symfony/web-link": "4.4.*",
+        "symfony/validator": "5.1.*",
+        "symfony/web-link": "5.1.*",
         "symfony/webpack-encore-bundle": "^1.8",
-        "symfony/yaml": "4.4.*"
+        "symfony/yaml": "5.1.*"
     },
     "require-dev": {
-        "doctrine/doctrine-fixtures-bundle": "^3.3",
+        "doctrine/doctrine-fixtures-bundle": "*",
         "symfony/debug-pack": "*",
-        "symfony/maker-bundle": "^1.0",
-        "symfony/stopwatch": "^4.4",
+        "symfony/maker-bundle": "*",
+        "symfony/stopwatch": "*",
         "symfony/test-pack": "*",
-        "symfony/twig-bundle": "^4.4",
-        "symfony/web-profiler-bundle": "^4.4"
+        "symfony/twig-bundle": "*",
+        "symfony/web-profiler-bundle": "*"
     },
     "config": {
         "platform": {
-            "php": "7.1.3"
+            "php": "7.3.3"
         },
         "preferred-install": {
             "*": "dist"
@@ -84,7 +84,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "4.4.*"
+            "require": "5.1.*"
         }
     }
 }
