--- a/.env
+++ b/.env
@@ -34,3 +34,10 @@ APP_SECRET=86928a87bbbd6dc79774e1feddc90174
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL="postgresql://commerce:kitty@commercekitty_database_1:5432/commercekitty?serverVersion=11&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/messenger ###
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=doctrine://default
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+###< symfony/messenger ###
