--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.3.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "knplabs/knp-menu-bundle": "^3.0",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "5.1.*",
         "symfony/console": "5.1.*",
