--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -154,6 +154,69 @@ product_show:
 # <-- Product
 
 # --> Vendor
+vendor_index:
+    methods:    GET
+    path:       /vendors.{_format}
+    controller: App\Controller\EntityController::index
+    defaults:
+        _format:            html
+        _entity_class_name: Vendor
+    requirements:
+        _format: html|json
+vendor_purge:
+    methods:    GET|DELETE
+    path:       /vendors/purge.{_format}
+    controller: App\Controller\EntityController::purge
+    defaults:
+        _format:            html
+        _entity_class_name: Vendor
+    requirements:
+        _format: html|json
+vendor_new:
+    methods:    GET|POST
+    path:       /vendors/new.{_format}
+    controller: App\Controller\EntityController::new
+    defaults:
+        _format:            html
+        _entity_class_name: Vendor
+    requirements:
+        _format: html|json
+vendor_edit:
+    methods:    GET|POST
+    path:       /vendors/{id}/edit.{_format}
+    controller: App\Controller\EntityController::edit
+    defaults:
+        _format:            html
+        _entity_class_name: Vendor
+    requirements:
+        _format: html|json
+vendor_clone:
+    methods:    GET|POST
+    path:       /vendors/{id}/clone.{_format}
+    controller: App\Controller\EntityController::clone
+    defaults:
+        _format:            html
+        _entity_class_name: Vendor
+    requirements:
+        _format: html|json
+vendor_delete:
+    methods:    GET|DELETE
+    path:       /vendors/{id}/delete.{_format}
+    controller: App\Controller\EntityController::delete
+    defaults:
+        _format:            html
+        _entity_class_name: Vendor
+    requirements:
+        _format: html|json
+vendor_show:
+    methods:    GET
+    path:       /vendors/{id}.{_format}
+    controller: App\Controller\EntityController::show
+    defaults:
+        _format:            html
+        _entity_class_name: Vendor
+    requirements:
+        _format: html|json
 # <-- Vendor
 
 # <-- Warehouse
