--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -49,7 +49,7 @@ channel_index:
 channel_purge:
     methods:    GET|DELETE
     path:       /channels/purge.{_format}
-    controller: App\Controller\EntityController::index
+    controller: App\Controller\EntityController::purge
     defaults:
         _format:            html
         _entity_class_name: Channel
