--- a/config/services.yaml
+++ b/config/services.yaml
@@ -42,3 +42,8 @@ services:
             - { name: doctrine.event_listener, event: postPersist }
             - { name: doctrine.event_listener, event: preUpdate }
             - { name: doctrine.event_listener, event: postUpdate }
+
+    App\EventListener\Channel\Woocommerce\TestConnectionListener:
+        autowire: true
+        tags:
+            - { name: kernel.event_listener, event: channel.woocommerce.test_connection }
