--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -7,7 +7,8 @@ framework:
             # https://symfony.com/doc/current/messenger.html#transport-configuration
             # async: '%env(MESSENGER_TRANSPORT_DSN)%'
             # failed: 'doctrine://default?queue_name=failed'
-            sync: 'sync://'
+            sync:  'sync://'
+            async: 'doctrine://default?queue_name=async'
 
         routing:
             # Route your messages to the transports
