--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "symfony/validator": "5.1.*",
         "symfony/web-link": "5.1.*",
         "symfony/webpack-encore-bundle": "^1.8",
-        "symfony/yaml": "5.1.*"
+        "symfony/yaml": "5.1.*",
+        "twig/intl-extra": "^3.1"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "*",
