--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -8,11 +8,19 @@ framework:
             # async: '%env(MESSENGER_TRANSPORT_DSN)%'
             # failed: 'doctrine://default?queue_name=failed'
             sync:  'sync://'
-            async: 'doctrine://default?queue_name=async'
+            commands:
+                dsn: 'doctrine://default?queue_name=commands'
+                retry_strategy:
+                    max_retries: 0
+            events:
+                dsn: 'doctrine://default?queue_name=events'
+                retry_strategy:
+                    max_retries: 0
 
         routing:
-            # Route your messages to the transports
-            # 'App\Message\YourMessage': async
+            'CommerceKitty\Message\Command\CommandMessageInterface': commands
+            'CommerceKitty\Message\Event\EventMessageInterface': events
+            'CommerceKitty\Message\Query\QueryMessageInterface': sync
 
         default_bus: command.bus
         buses:
